tests/native-lib/fail/tracing/wrong_free.stderr
warning: sharing memory with a native function called via FFI
  --> tests/native-lib/fail/tracing/wrong_free.rs:LL:CC
   |
LL |     unsafe { free_ptr(box_ptr.cast()) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^ sharing memory with a native function
   |
   = help: when memory is shared with a native function call, Miri can only track initialisation and provenance on a best-effort basis
   = help: in particular, Miri assumes that the native call initializes all memory it has written to
   = help: Miri also assumes that any part of this memory may be a pointer that is permitted to point to arbitrary exposed memory
   = help: what this means is that Miri will easily miss Undefined Behavior related to incorrect usage of this shared memory, so you should not take a clean Miri run as a signal that your FFI code is UB-free
   = help: tracing memory accesses in native code is not yet fully implemented, so there can be further imprecisions beyond what is documented here

error: Undefined Behavior: deallocating ALLOC, which is Rust heap memory, using C heap deallocation operation
  --> tests/native-lib/fail/tracing/wrong_free.rs:LL:CC
   |
LL |     unsafe { free_ptr(box_ptr.cast()) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^ Undefined Behavior occurred here
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

